--- a/RealmPractice/Info.plist
+++ b/RealmPractice/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>カメラの使用を許可しますか？</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>写真情報にアクセスしてもいいですか？</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
